; ModuleID = '/home/carl/AnghaBench/pifs/src/extr_πfs.c_pifs_getattr.c'
source_filename = "/home/carl/AnghaBench/pifs/src/extr_\CF\80fs.c_pifs_getattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@full_path = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.stat*)* @pifs_getattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pifs_getattr(i8* %0, %struct.stat* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.stat* %1, %struct.stat** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @FULL_PATH(i8* %6)
  %8 = load i32, i32* @full_path, align 4
  %9 = load %struct.stat*, %struct.stat** %4, align 8
  %10 = call i32 @lstat(i32 %8, %struct.stat* %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.stat*, %struct.stat** %4, align 8
  %12 = getelementptr inbounds %struct.stat, %struct.stat* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sdiv i32 %13, 2
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32, i32* @errno, align 4
  %19 = sub nsw i32 0, %18
  br label %22

20:                                               ; preds = %2
  %21 = load i32, i32* %5, align 4
  br label %22

22:                                               ; preds = %20, %17
  %23 = phi i32 [ %19, %17 ], [ %21, %20 ]
  ret i32 %23
}

declare dso_local i32 @FULL_PATH(i8*) #1

declare dso_local i32 @lstat(i32, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
